@@ -32,6 +32,7 @@ Bug fixes
 * resolution: fixed bug in computation of resolution that lead to (e.g.) incorrect boxplot widths when there was only a single x value in a group.
 * position_stack: fixed bug in detection of overlap for very large bins
 * scale_discrete: factor levels no longer mistakenly reordered
+* scale_hue: now spans full range of hue if it less than 360 degrees
 * show now works with ggplot objects
 * stat_summary: now warns when dropping records with missing values
 * stat_summary: should be a little faster
